# scratch_optimization

./: EM_algorithm.ipynb  GBDT.ipynb  README.md  glm.ipynb  lm.ipynb  ltr_pairwise.ipynb  pyproject.toml
experiments/: MakeDataset.ipynb  NBD_vs_ML.ipynb
