[tool.poetry]
name = "scratch_optimization"
version = "0.1.0"
description = ""
authors = ["keeeeei79 <keeeeei79@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.11"
pandas = "^1.4.3"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
scipy = "^1.8.1"
statsmodels = "^0.13.2"
lightgbm = "^3.3.2"
Lifetimes = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
